# cornerswitch

./: cabal.sandbox.config  cornerswitch.cabal
src/: AI.hs  Board.hs  Chess.hs  Console.hs  Evaluator.hs  Main.hs  PgnParser.hs
test/: Test.hs
